src/styles/styles.scss
@import "https://fonts.googleapis.com/css2?family=Play&display=swap";
@import "variables";

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

*:focus {
  outline: 3px solid $primary-color;
}

html,
body {
  background: $background-color;
  color: $text-color;
  width: 100%;
  margin: 0;
  padding: 0;
  font-family: -apple-system, Arial, system-ui;
  font-weight: normal;
  word-wrap: break-word;
  line-height: $line-height;
  font-size: $font-size;
}

h1,
h2,
h3,
h4,
h5 {
  font-family: Play, sans-serif, -apple-system, Arial, system-ui;
  font-weight: 700;
  color: $primary-color;
}

h1 {
  font-size: 3.17em;
  line-height: 1.09em;
  padding-top: 0.211em;
  margin-bottom: 0.333em;
}

h2 {
  font-size: 2.39em;
  line-height: 1.44em;
  padding-top: 0.372em;
  margin-bottom: 0.349em;
}

h3 {
  font-size: 1.78em;
  line-height: 1.94em;
  padding-top: 0.625em;
  margin-bottom: 0.344em;
}

h4 {
  font-size: 1.33em;
  line-height: 1.29em;
  padding-top: 0.292em;
  margin-bottom: 1em;
}

p {
  font-size: 1em;
  line-height: 1.72em;
  padding-top: 0.5em;
  margin-bottom: 1.22em;
}

ul {
  padding: 0 0 0 1em;
  list-style-type: square;
}

a {
  color: $primary-color;

  &:visited {
    color: $lighter-text-color;
  }
}

strong,
b {
  font-weight: bold;
}

.visually-hidden {
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;

  &:focus {
    clip: auto;
    height: auto;
    overflow: auto;
    position: absolute;
    width: auto;
  }
}

.page {
  display: flex;
  flex: 1;
  justify-content: center;
  height: 100%;
  padding: 1em;

  &__content {
    max-width: $column-width;
    width: 100%;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    height: 100%;

    .page__section { /* stylelint-disable-line selector-class-pattern */
      display: flex;
      flex-direction: column;
      flex: 1;
    }
  }

  .footer {
    padding-bottom: 1em;
    padding-top: 1em;
    margin-top: 1em;
    display: flex;
    width: 100%;
    flex-wrap: wrap;

    @media (max-width: $mobile-width) {
      flex-direction: column;
    }

    &__contacts {
      height: 2.8em;

      @media (max-width: $mobile-width) {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-evenly;
        margin: 0 -0.5em;
        margin-top: 1em;
        height: auto;
      }
    }

    &__section {
      flex: 1;
      display: flex;
      align-items: center;
    }

    &__icon {
      text-decoration: none;
      background-size: 60%;
      background-repeat: no-repeat;
      background-position: center;
      width: 2.8em;
      height: 2.8em;
      display: inline-block;
      filter: $filter-primary;

      &--twitter { background-image: url("/assets/icons/twitter.svg"); }
      &--instagram { background-image: url("/assets/icons/instagram.svg"); }
      &--linkedin { background-image: url("/assets/icons/linkedin.svg"); }
      &--stack-overflow { background-image: url("/assets/icons/stack-overflow.svg"); }
      &--mail { background-image: url("/assets/icons/mail.svg"); }
      &--telegram { background-image: url("/assets/icons/telegram.svg"); }
      &--github { background-image: url("/assets/icons/github.svg"); }
      &--gpg { background-image: url("/assets/icons/key.svg"); }
    }
  }
}

